tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-duplicate-field.diagnostic
diagnostic error code=T0001 family=type message="duplicate field 'x' in struct match pattern" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" display="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" bytes=183
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-duplicate-field.ari" line=9 column=26 end_line=9 end_column=32 byte_start=141 byte_end=147 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-duplicate-field.ari:9:26\n   |\n 9 |     Point { x: first, x: second, y } => first + second + y,\n   |                          ^^^^^^"
